2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* configure.in: add AX_COPY_IF_CHANGE() use it to generate version.h
	* .cvsignore: update

	* gui/Makefile.am:
	* gui/oprof_start.cpp:
	* libregex/Makefile.am:
	* libregex/demangle_symbol.cpp: don't use -DBINDIR, rather include
	  version.h to get install path


2003-02-23  John Levon  <levon@movementarian.org>

	* README: quick start build insns

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libregex/Makefile.am: install stl.pat in $prefix/share/oprofile
	* libregex/demangle_symbol.cpp: use DATADIR not BINDIR
	* libregex/magle-name.txt: add test for pointer
	* libregex/stl.pat: partial support for pointer

2003-02-23  John Levon  <levon@movementarian.org>

	* autogen.sh: error out if options passed

2003-02-23  John Levon  <levon@movementarian.org>

	* libregex/op_regex.h:
	* libregex/regex_test.cpp: fix std::

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/demangle_symbol.cpp:
	* libutil++/demangle_symbol.h: move to
	* libregex/demangle_symbol.cpp:
	* libregex/demangle_symbol.h: here to avoid circular reference between
	  libutil++ and libregex
	* libregex/Makefile.am:
	* libutil++/Makefile.am: update according to file move

	* pp/Makefile.am:
	* pp/op_time.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source.cpp:
	* pp/op_to_source_options.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp_options.cpp: add -D --Demangle options enabling C++
	  demangled name filtering.

2003-02-23  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: trim(), ltrim(), rtrim() new functions

	* Makefile.am: handle libregex directory
	* configure.in: handle libregex/Makefile

	* libregex/.cvsignore:
	* libregex/Makefile.am :
	* libregex/mangled-name.txt:
	* libregex/op_regex.cpp:
	* libregex/op_regex.h:
	* libregex/regex_test.cpp:
	* libregex/stl.pat: new file implementing a match and replace regular